正式完成首页，并修复部分文字和图片大小问题

--- a/src/main/webapp/tiaoshi.html
+++ b/src/main/webapp/tiaoshi.html
@@ -3,14 +3,207 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="/bootstrap/4.3.1/css/bootstrap.min.css">
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="/jquery/3.4.1/jquery-3.4.1.min.js" ></script>
-    <script src="/popper/popper.min.js"></script>
-    <script src="/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>
+    <script src="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-
+<div class="col-12">
+    <h4 class="list-group-item list-group-item-primary">家电</h4>
+    <table class="table text-center">
+        <th>
+            <div class="col-12">
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <img class="img-thumbnail" src="images/jiadian/xiaomibingxiang.jpg" width="160"
+                             height="160"/><br>
+                        <a href="/shopping_war_exploded/show_detail.action?id=1">小米冰箱</a>
+                        <span>2399元</span></li>
+                </ul>
+            </div>
+        </th>
+        <th>
+            <div class="col-12">
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <img class="img-thumbnail" src="images/jiadian/xiaomibingxiang.jpg" width="160"
+                             height="160"/><br>
+                        <a href="">小米冰箱</a>
+                        <span>2399元</span></li>
+                </ul>
+            </div>
+        </th>
+        <th>
+            <div class="col-12 ">
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <img class="img-thumbnail" src="images/jiadian/xiaomibingxiang.jpg" width="160"
+                             height="160"/><br>
+                        <a href="">小米冰箱</a>
+                        <span>2399元</span></li>
+                </ul>
+            </div>
+        </th>
+        <th>
+            <div class="col-12">
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <img class="img-thumbnail" src="images/jiadian/xiaomibingxiang.jpg" width="160"
+                             height="160"/><br>
+                        <a href="">小米冰箱</a>
+                        <span>2399元</span></li>
+                </ul>
+            </div>
+        </th>
+    </table>
+</div>
+<div class="col-12">
+    <h4 class="list-group-item list-group-item-primary">手机</h4>
+    <table class="table text-center">
+        <th>
+            <div class="col-12">
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <img class="img-thumbnail" src="images/jiadian/xiaomibingxiang.jpg" width="160"
+                             height="160"/><br>
+                        <a href="/shopping_war_exploded/show_detail.action?id=1">小米冰箱</a>
+                        <span>2399元</span></li>
+                </ul>
+            </div>
+        </th>
+        <th>
+            <div class="col-12">
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <img class="img-thumbnail" src="images/jiadian/xiaomibingxiang.jpg" width="160"
+                             height="160"/><br>
+                        <a href="">小米冰箱</a>
+                        <span>2399元</span></li>
+                </ul>
+            </div>
+        </th>
+        <th>
+            <div class="col-12 ">
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <img class="img-thumbnail" src="images/jiadian/xiaomibingxiang.jpg" width="160"
+                             height="160"/><br>
+                        <a href="">小米冰箱</a>
+                        <span>2399元</span></li>
+                </ul>
+            </div>
+        </th>
+        <th>
+            <div class="col-12">
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <img class="img-thumbnail" src="images/jiadian/xiaomibingxiang.jpg" width="160"
+                             height="160"/><br>
+                        <a href="">小米冰箱</a>
+                        <span>2399元</span></li>
+                </ul>
+            </div>
+        </th>
+    </table>
+</div>
+<div class="col-12">
+    <h4 class="list-group-item list-group-item-primary">智能设备</h4>
+    <table class="table text-center">
+        <th>
+            <div class="col-12">
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <img class="img-thumbnail" src="images/jiadian/xiaomibingxiang.jpg" width="160"
+                             height="160"/><br>
+                        <a href="/shopping_war_exploded/show_detail.action?id=1">小米冰箱</a>
+                        <span>2399元</span></li>
+                </ul>
+            </div>
+        </th>
+        <th>
+            <div class="col-12">
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <img class="img-thumbnail" src="images/jiadian/xiaomibingxiang.jpg" width="160"
+                             height="160"/><br>
+                        <a href="">小米冰箱</a>
+                        <span>2399元</span></li>
+                </ul>
+            </div>
+        </th>
+        <th>
+            <div class="col-12 ">
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <img class="img-thumbnail" src="images/jiadian/xiaomibingxiang.jpg" width="160"
+                             height="160"/><br>
+                        <a href="">小米冰箱</a>
+                        <span>2399元</span></li>
+                </ul>
+            </div>
+        </th>
+        <th>
+            <div class="col-12">
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <img class="img-thumbnail" src="images/jiadian/xiaomibingxiang.jpg" width="160"
+                             height="160"/><br>
+                        <a href="">小米冰箱</a>
+                        <span>2399元</span></li>
+                </ul>
+            </div>
+        </th>
+    </table>
+</div>
+<div class="col-12">
+    <h4 class="list-group-item list-group-item-primary">食品</h4>
+    <table class="table text-center">
+        <th>
+            <div class="col-12">
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <img class="img-thumbnail" src="images/jiadian/xiaomibingxiang.jpg" width="160"
+                             height="160"/><br>
+                        <a href="/shopping_war_exploded/show_detail.action?id=1">小米冰箱</a>
+                        <span>2399元</span></li>
+                </ul>
+            </div>
+        </th>
+        <th>
+            <div class="col-12">
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <img class="img-thumbnail" src="images/jiadian/xiaomibingxiang.jpg" width="160"
+                             height="160"/><br>
+                        <a href="">小米冰箱</a>
+                        <span>2399元</span></li>
+                </ul>
+            </div>
+        </th>
+        <th>
+            <div class="col-12 ">
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <img class="img-thumbnail" src="images/jiadian/xiaomibingxiang.jpg" width="160"
+                             height="160"/><br>
+                        <a href="">小米冰箱</a>
+                        <span>2399元</span></li>
+                </ul>
+            </div>
+        </th>
+        <th>
+            <div class="col-12">
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <img class="img-thumbnail" src="images/jiadian/xiaomibingxiang.jpg" width="160"
+                             height="160"/><br>
+                        <a href="">小米冰箱</a>
+                        <span>2399元</span></li>
+                </ul>
+            </div>
+        </th>
+    </table>
+</div>
 </body>
 </html>
